<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="약품 입력하기"/>
        </LinearLayout>

        <EditText
            android:nextFocusDown="@id/add_why_eat"
            android:layout_marginTop="10dp"
            android:id="@+id/add_medicine"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_medicine"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="병명 입력하기"/>

        <EditText
            android:nextFocusDown="@id/add_first_date"
            android:layout_marginTop="10dp"
            android:id="@+id/add_why_eat"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_why_eat"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="복용 기간 입력하기"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:nextFocusRight="@id/add_last_date"
                android:layout_marginTop="10dp"
                android:id="@+id/add_first_date"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/add_first_date"/>
            <TextView
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="~"/>
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/add_last_date"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/add_last_date"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_finish_add"
        android:padding="5dp"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_adding"/>

</LinearLayout>